<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bkg"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text"
            android:hint="@string/name"
            android:maxLength="80"
            android:paddingLeft="16dp"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text"
            android:hint="@string/email_register"
            android:maxLength="60"
            android:paddingLeft="16dp"
            android:textAlignment="center"
            android:textSize="30sp"/>


        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text"
            android:hint="@string/username"
            android:maxLength="60"
            android:paddingLeft="20dp"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text"
            android:hint="@string/password"
            android:maxLength="60"
            android:paddingLeft="20dp"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text"
            android:hint="@string/confirmpassword"
            android:maxLength="60"
            android:paddingLeft="20dp"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <Button
        android:id="@+id/btnRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button02"
        android:text="@string/register"
        android:textColor="#66FF66"
        android:textSize="28dp"/>


        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="40sp"
            android:layout_marginBottom="16dp"
            android:text="@string/exit"
            android:textColor="#FFEB3B"
            android:textSize="18sp" />

    </LinearLayout>
    
    </ScrollView>
    
    